--- a/simplebot_manga/templates/site_list.j2
+++ b/simplebot_manga/templates/site_list.j2
@@ -1,6 +1,6 @@
 {% extends "base.j2" %}
 {% block content %}
-    {% for lang in lang2sites.keys() %}
+    {% for lang in lang2sites.keys()|sort(attribute="name") %}
         <h2>{{ lang.value }}</h2>
         {% for site in lang2sites[lang] %}
             <a href="mailto:{{ bot_addr }}?body=/search%20{{ lang.name }}%20{{ quote_plus(site.url) }}%20{{ quote_plus(query) }}">
